turn on pylint for framework

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 # python environments & artifacts
 **/.venv/
 **/__pycache__/
+**/.mypy_cache
+**/.pytest_cache
 
 # node & node_modules
 **/node_modules/
