--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pytest-asyncio = "^0.16.0"
 aiopg = "^1.3.3"
 graphene = "^3.0"
 graphql-server = "^3.0.0-beta.4"
+bcrypt = "^3.2.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.12b0"
