--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ aiopg = "^1.3.3"
 graphene = "^3.0"
 graphql-server = "^3.0.0-beta.4"
 bcrypt = "^3.2.0"
+aiohttp-middlewares = "^1.2.1"
 
 [tool.poetry.dev-dependencies]
 black = "^21.12b0"
