--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,24 +6,23 @@ authors = ["Jacob McCollum <jacob.r.mccollum@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-aiohttp = "^3.8.1"
 uuid = "^1.30"
-pytest-asyncio = "^0.16.0"
 aiopg = "^1.3.3"
+bcrypt = "^3.2.0"
+aiohttp = "^3.8.1"
+aiosqlite = "^0.17.0"
 graphene = "^3.0"
 graphql-server = "^3.0.0-beta.4"
-bcrypt = "^3.2.0"
 aiohttp-middlewares = "^1.2.1"
 
 [tool.poetry.dev-dependencies]
-black = "^21.12b0"
-aiopg = "^1.3.3"
-aiosqlite = "^0.17.0"
-pytest = "^6.2.5"
-pytest-asyncio = "^0.16.0"
 mypy = "^0.930"
-graphene-stubs = "^0.15"
+black = "^21.12b0"
 pylint = "^2.12.2"
+pytest = "^6.2.5"
+syrupy = "^1.5.0"
+pytest-asyncio = "^0.16.0"
+graphene-stubs = "^0.15"
 
 [tool.mypy]
 python_version = "3.10"
