--- a/site/package.json
+++ b/site/package.json
@@ -4,10 +4,11 @@
   "version": "0.0.0",
   "scripts": {
     "build": "preact build",
-    "serve": "sirv build --port 8080 --cors --single",
-    "dev": "preact watch",
+    "serve": "sirv build -P 8080 -H 0.0.0.0 --cors --single",
+    "dev": "PORT=9090 preact watch",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
-    "test": "jest ./tests"
+    "test": "jest ./tests",
+    "generate": "yarn graphql-codegen"
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
@@ -20,24 +21,36 @@
     ]
   },
   "dependencies": {
-    "preact": "10.3.1",
+    "@material-ui/core": "^4.12.3",
+    "lodash": "^4.17.21",
+    "preact": "10.6.4",
     "preact-render-to-string": "5.1.4",
-    "preact-router": "3.2.1"
+    "preact-router": "3.2.1",
+    "rxjs": "7.5.1"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.3.1",
+    "@graphql-codegen/plugin-helpers": "^2.3.2",
+    "@graphql-codegen/typescript": "2.4.2",
+    "@graphql-codegen/typescript-operations": "2.2.2",
+    "@graphql-codegen/visitor-plugin-common": "^2.5.2",
     "@types/enzyme": "3.10.5",
     "@types/jest": "26.0.8",
+    "@types/lodash": "^4.14.178",
     "@typescript-eslint/eslint-plugin": "2.25.0",
     "@typescript-eslint/parser": "2.25.0",
     "enzyme": "3.11.0",
     "enzyme-adapter-preact-pure": "3.1.0",
     "eslint": "6.8.0",
     "eslint-config-preact": "1.1.1",
+    "graphql": "16.2.0",
     "jest": "27.2.5",
     "jest-preset-preact": "4.0.2",
-    "preact-cli": "3.0.0",
+    "preact-cli": "3.3.3",
+    "sass": "1.32.13",
+    "sass-loader": "10.1.1",
     "sirv-cli": "1.0.0-next.3",
-    "typescript": "4.5.2"
+    "typescript": "4.5.4"
   },
   "jest": {
     "preset": "jest-preset-preact",
