--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -14,11 +14,17 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: "3.10"
+      - name: create python virtualenv
+        run: python -m venv .venv
       - name: install the task runner
         uses: arduino/setup-task@v1
         with:
           version: 3.10.0
       - name: install dependencies
-        run: task install
+        run: |
+          source .venv/bin/activate
+          task install
       - name: run tests
-        run: task test
+        run: |
+          source .venv/bin/activate
+          task test
