--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 # editor files
 **/.vscode/
 
-# python environments & artifacts
+# python environments
 **/.venv/
-**/__pycache__/
 **/.mypy_cache
 **/.pytest_cache
+**/__pycache__/
+
+# artifacts
 **/*.log
+dist/
