--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pytest = "^6.2.5"
 syrupy = "^1.5.0"
 pytest-asyncio = "^0.16.0"
 graphene-stubs = "^0.15"
+pydocstyle = "^6.1.1"
 
 [tool.mypy]
 python_version = "3.10"
@@ -51,6 +52,10 @@ disable = [
 # Allow a larger number of returns to enable
 # switch-like statements with many returning cases
 max-returns = 20
+
+[tool.pydocstyle]
+convention = "pep257"
+match_dir = "money"
 
 [tool.pytest.ini_options]
 testpaths = [
