--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ syrupy = "^1.5.0"
 pytest-asyncio = "^0.16.0"
 graphene-stubs = "^0.15"
 pydocstyle = "^6.1.1"
+pydoc-markdown = "^4.5.0"
+mkdocs = "^1.2.3"
 
 [tool.mypy]
 python_version = "3.10"
