--- a/fete.web/pyproject.toml
+++ b/fete.web/pyproject.toml
@@ -9,7 +9,10 @@ packages = [{ include = "fete" }]
 [tool.poetry.dependencies]
 python = "^3.10"
 stringcase = "^1.2.0"
+"fete-core" = "^0.1.0"
 
+[tool.poetry.group.dev.dependencies]
+"fete-core" = { path = "../fete.core", develop = true }
 
 [build-system]
 requires = ["poetry-core"]
