--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,13 @@ jobs:
         uses: arduino/setup-task@v1
         with:
           version: 3.10.0
+      - name: (macos) install docker
+        if: ${{ matrix.os == 'macos-latest' }}
+        run: |
+          brew install docker-machine docker
+          docker -–version
       - name: install deps and run tests
         run: |
-          source .venv/bin/activate
+          . .venv/bin/activate
           task postgres:build
           task ci
