--- a/fete.web/pyproject.toml
+++ b/fete.web/pyproject.toml
@@ -11,7 +11,7 @@ python = "^3.10"
 stringcase = "^1.2.0"
 "fete-core" = "^0.1.0"
 
-[tool.poetry.group.dev.dependencies]
+[tool.poetry.dev-dependencies]
 "fete-core" = { path = "../fete.core", develop = true }
 
 [build-system]
