--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 python = "^3.10"
 
 
-[tool.poetry.group.dev.dependencies]
+[tool.poetry.dev-dependencies]
 mypy = "^0.931"
 pytest = "^6.2.5"
 black = "^21.12-beta.0"
@@ -17,12 +17,6 @@ graphene-stubs = "^0.15"
 pytest-asyncio = "^0.17.0"
 syrupy = "^1.7.0"
 pylint = "^2.12.2"
-
-[tool.poetry-workspace-plugin.workspaces]
-"fete.core" = "fete.core"
-"fete.web" = "fete.web"
-"fete.graphql" = "fete.graphql"
-"fete.postgres" = "fete.postgres"
 
 [tool.mypy]
 python_version = "3.10"
