--- a/flurry.web/pyproject.toml
+++ b/flurry.web/pyproject.toml
@@ -1,18 +1,18 @@
 [tool.poetry]
-name = "fete-web"
+name = "flurry-web"
 version = "0.1.0"
 description = ""
 authors = ["Jacob McCollum <jacob.r.mccollum@gmail.com>"]
 readme = "README.md"
-packages = [{ include = "fete" }]
+packages = [{ include = "flurry" }]
 
 [tool.poetry.dependencies]
 python = "^3.10"
 stringcase = "^1.2.0"
-"fete-core" = "^0.1.0"
+"flurry-core" = "^0.1.0"
 
 [tool.poetry.dev-dependencies]
-"fete-core" = { path = "../fete.core", develop = true }
+"flurry-core" = { path = "../flurry.core", develop = true }
 
 [build-system]
 requires = ["poetry-core"]
