--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,13 @@ pylint = "^2.12.2"
 [tool.mypy]
 python_version = "3.10"
 follow_imports = "normal"
-mypy_path = ["flurry.core", "flurry.graphql", "flurry.postgres", "flurry.web"]
+mypy_path = [
+    "flurry.core",
+    "flurry.graphql",
+    "flurry.postgres",
+    "flurry.web",
+    "flurry.util",
+]
 files = ["."]
 exclude = ["tests"]
 namespace_packages = true
