--- a/flurry.postgres/pyproject.toml
+++ b/flurry.postgres/pyproject.toml
@@ -10,9 +10,11 @@ packages = [{ include = "flurry" }]
 python = "^3.10"
 aiopg = "^1.3.3"
 "flurry-core" = "^0.1.0"
+"flurry-util" = "^0.1.0"
 
 [tool.poetry.dev-dependencies]
 "flurry-core" = { path = "../flurry.core", develop = true }
+"flurry-util" = { path = "../flurry.util", develop = true }
 
 [build-system]
 requires = ["poetry-core"]
