--- a/flurry.web/pyproject.toml
+++ b/flurry.web/pyproject.toml
@@ -9,9 +9,11 @@ packages = [{ include = "flurry" }]
 [tool.poetry.dependencies]
 python = "^3.10"
 stringcase = "^1.2.0"
+"flurry-util" = "^0.1.0"
 "flurry-core" = "^0.1.0"
 
 [tool.poetry.dev-dependencies]
+"flurry-util" = { path = "../flurry.util", develop = true }
 "flurry-core" = { path = "../flurry.core", develop = true }
 
 [build-system]
