--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ graphene-stubs = "^0.15"
 pytest-asyncio = "^0.17.0"
 syrupy = "^1.7.0"
 pylint = "^2.12.2"
+PyGithub = "^1.55"
+semver = "^2.13.0"
 
 [tool.mypy]
 python_version = "3.10"
