--- a/flurry.graphql/pyproject.toml
+++ b/flurry.graphql/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "flurry-graphql"
-version = "0.1.0"
+version = "0.2.0"
 description = ""
 authors = ["Jacob McCollum <jacob.r.mccollum@gmail.com>"]
 readme = "README.md"
@@ -11,11 +11,13 @@ python = "^3.10"
 graphene = "^3.0"
 aiohttp = "^3.8.1"
 aiohttp-middlewares = "^1.2.1"
-"flurry-core" = "^0.1.0"
 graphql-core = "<3.2.0"
+"flurry-core" = "^0.2.0"
+"flurry-util" = "^0.2.0"
 
 [tool.poetry.dev-dependencies]
 "flurry-core" = { path = "../flurry.core", develop = true }
+"flurry-util" = { path = "../flurry.util", develop = true }
 
 
 [build-system]
